--- a/index.html
+++ b/index.html
@@ -81,17 +81,32 @@
 
                 <div id="slide1" class="carousel-item relative w-full">
 
-                    <img src="https://daisyui.com/images/stock/photo-1625726411847-8cbb60cc71e6.jpg" class="w-full" />
-                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide4" class="btn btn-circle">❮</a>
-                        <a href="#slide2" class="btn btn-circle">❯</a>
+                    <img src="Images/1.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 bottom-0">
+                        <a href="#slide1" class="btn btn-circle bg-black text-white">❮</a>
+                        <a href="#slide2" class="btn btn-circle bg-black text-white">❯</a>
                     </div>
+                    <div class=" lg:absolute bottom-10 right-10 bg-black text-white rounded-lg max-w-md text-center">
+                        <h2 class="font-semibold text-2xl">Meet all the heroes from the field</h2>
+                        <p class="">Teddington Hockey Club is an inclusive, friendly, thriving and successful club, run
+                            by
+                            volunteers. We welcome all new joiners. Please refer to our Membership and Fees Terms and
+                            Conditions PDF to the right for further information around installments and more.</p>
+                    </div>
+
                 </div>
                 <div id="slide2" class="carousel-item relative w-full">
-                    <img src="https://daisyui.com/images/stock/photo-1609621838510-5ad474b7d25d.jpg" class="w-full" />
-                    <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
-                        <a href="#slide1" class="btn btn-circle">❮</a>
-                        <a href="#slide3" class="btn btn-circle">❯</a>
+                    <img src="Images/2.png" class="w-full" />
+                    <div class="absolute flex justify-between transform -translate-y-1/2 bottom-0">
+                        <a href="#slide2" class="btn btn-circle bg-black text-white ">❮</a>
+                        <a href="#slide1" class="btn btn-circle bg-black text-white">❯</a>
+                    </div>
+                    <div class=" lg:absolute bottom-10 right-10 bg-black text-white rounded-lg max-w-md text-center">
+                        <h2 class="font-semibold text-2xl">Meet all the heroes from the field</h2>
+                        <p class="">Teddington Hockey Club is an inclusive, friendly, thriving and successful club, run
+                            by
+                            volunteers. We welcome all new joiners. Please refer to our Membership and Fees Terms and
+                            Conditions PDF to the right for further information around installments and more.</p>
                     </div>
                 </div>
             </div>
@@ -103,34 +118,34 @@
                 <div></div>
                 <div class="text-center p-10 space-y-3">
                     <h3 class="text-5xl font-bold">Professional Hockeys Club</h3>
-                    <p class="text-2xl">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat
-                        dolor. Purus urna
-                        in sit nullam proin. </p>
+                    <p class="text-2xl">Being part of Teddington Hockey Club is not just about playing hockey we have
+                        community amateur sports club status and are always looking for ways to work with and in our
+                        local community to bring hockey to everyone. </p>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 py-10 px-24 ">
                     <div class="text-center">
                         <div class="before:bg-[#E7E7E8]  radial-progress text-[#FF4240] " style="--value:87;"
                             role="progressbar">87%</div>
-                        <h4>Prayer Facility</h4>
-                        <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+                        <h4 class="text-xl font-semibold">Prayer Facility</h4>
+                        <p>Welcome hockey players of all ages and abilities</p>
                     </div>
                     <div class="text-center">
                         <div class="radial-progress text-[#49D293] before:bg-[#E7E7E8] " style="--value:95;"
                             role="progressbar">95%</div>
-                        <h4>Prayer Facility</h4>
-                        <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+                        <h4 class="text-xl font-semibold">Experienced Coach</h4>
+                        <p>We use Teamo as our whole Club Management system</p>
                     </div>
                     <div class="text-center">
                         <div class="radial-progress text-[#FFB546] before:bg-[#E7E7E8]" style=" --value:90;"
                             role="progressbar">90%</div>
-                        <h4>Prayer Facility</h4>
-                        <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+                        <h4 class="text-xl font-semibold">Senior Player</h4>
+                        <p>Please click on the appropriate link for the Junior</p>
                     </div>
                     <div class="text-center">
                         <div class="radial-progress text-primary before:bg-[#E7E7E8]" style="--value:80;"
                             role="progressbar">80%</div>
-                        <h4>Prayer Facility</h4>
-                        <p>Amet consectetur. Condimentum dignissim adipiscing .</p>
+                        <h4 class="text-xl font-semibold">Training Ground</h4>
+                        <p>We expect club members to contribute towards the running</p>
                     </div>
                 </div>
             </div>
@@ -143,9 +158,9 @@
 
                 <div class="text-center p-10 space-y-3 ">
                     <h3 class="text-5xl font-bold">Program Sections</h3>
-                    <p class="text-2xl">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat
-                        dolor. Purus urna
-                        in sit nullam proin. </p>
+                    <p class="text-2xl">The hockey program offers comprehensive training for players of all skill
+                        levels, emphasizing skill development, strategic gameplay, and physical conditioning. With
+                        experienced coaching staff and a structured schedule </p>
                 </div>
                 <div>
                     <div
@@ -156,11 +171,10 @@
                                 <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
                                 <div class=" hero-content lg:text-left text-white text-center text-neutral-content">
                                     <div class="absolute max-w-md lg:left-10 lg:bottom-1">
-                                        <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
-                                        <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut
-                                            assumenda
-                                            excepturi
-                                            exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                                        <h1 class="mb-5 text-5xl font-bold">Junior Program</h1>
+                                        <p class="mb-5">Woking Hockey Club Junior section aims to engage, challenge and
+                                            inspire players of all abilities for them to achieve to the best of their
+                                            ability or aspirations.</p>
                                         <button class="btn bg-[#FF4240] border-[#FF4240] text-white">Registration
                                             Now</button>
                                     </div>
@@ -173,11 +187,10 @@
                                 <div class="hero-overlay bg-opacity-60 rounded-2xl  h-[338px]"></div>
                                 <div class=" hero-content lg:text-left text-white text-center text-neutral-content ">
                                     <div class="absolute max-w-md lg:left-10 lg:-bottom-2">
-                                        <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
-                                        <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut
-                                            assumenda
-                                            excepturi
-                                            exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                                        <h1 class="mb-5 text-5xl font-bold">Teenager Program</h1>
+                                        <p class="mb-5">The Junior section provides a welcoming and social place to
+                                            learn, have fun, make friends, and enjoy membership. For more information
+                                            about our Junior section</p>
                                         <button class="btn bg-[#FF4240] border-[#FF4240] text-white">Registration
                                             Now</button>
                                     </div>
@@ -190,11 +203,10 @@
                                 <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
                                 <div class=" hero-content lg:text-left text-white text-center text-neutral-content">
                                     <div class="absolute max-w-md lg:left-10 lg:-bottom-44">
-                                        <h1 class="mb-5 text-5xl font-bold">Hello there</h1>
-                                        <p class="mb-5">Provident cupiditate voluptatem et in. Quaerat fugiat ut
-                                            assumenda
-                                            excepturi
-                                            exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.</p>
+                                        <h1 class="mb-5 text-5xl font-bold">Professional Program</h1>
+                                        <p class="mb-5">Weekly training sessions run by coaches are available for those
+                                            who are looking to get back into hockey. These sessions are mixed sessions
+                                            for Men's and Ladies. For more information about our Men's section.</p>
                                         <button class="btn bg-[#FF4240] border-[#FF4240] text-white">Registration
                                             Now</button>
                                     </div>
