--- a/index.html
+++ b/index.html
@@ -228,9 +228,9 @@
 
                 <div class="text-center p-10 space-y-3 ">
                     <h3 class="text-5xl font-bold">Our New Products</h3>
-                    <p class="text-2xl">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat
-                        dolor. Purus urna
-                        in sit nullam proin. </p>
+                    <p class="text-2xl">Hockey products can encompass a wide range, including equipment, apparel,
+                        training tools, and more. If you have a specific type of hockey product in mind or if you could
+                        provide more details, I'd be happy to offer information or recommendations accordingly </p>
                 </div>
                 <div class="py-10">
                     <div class="grid gap-6 grid-cols-1  lg:grid-cols-2">
@@ -261,7 +261,54 @@
                         <!-- second card -->
                         <div class="card  p-8 border-2 border-slate-400 shadow-xl">
                             <div class="hero-content flex-col lg:flex-row">
-                                <img src="Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
+                                <img src="Images/6.png" class="max-w-sm rounded-lg shadow-2xl" />
+                                <div>
+                                    <div class="flex flex-row lg:flex-col space-x-4">
+                                        <ul class="flex gap-10  ">
+                                            <li><i class="fa-solid fa-star text-[#F99808]"></i> 5.0</li>
+                                            <li><i class="fa-regular fa-eye"></i> 20</li>
+                                            <li><i class="fa-regular fa-heart"></i> 200</li>
+                                        </ul>
+                                    </div>
+
+                                    <h1 class="text-3xl font-bold">World Cup Flags Football</h1>
+                                    <p class="py-6">Back to Hockey is back once more for an informal re-introduction to
+                                        foundation
+                                    </p>
+                                    <div class="flex space-x-10 ">
+                                        <h4 class="text-[#FF4240] text-2xl">Price - $22.00</h4>
+                                        <p><i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="card  p-8 border-2 border-slate-400 shadow-xl">
+                            <div class="hero-content flex-col lg:flex-row">
+                                <img src="Images/7.png" class="max-w-sm rounded-lg shadow-2xl" />
+                                <div>
+                                    <div class="flex flex-row lg:flex-col space-x-4">
+                                        <ul class="flex gap-10  ">
+                                            <li><i class="fa-solid fa-star text-[#F99808]"></i> 5.0</li>
+                                            <li><i class="fa-regular fa-eye"></i> 20</li>
+                                            <li><i class="fa-regular fa-heart"></i> 200</li>
+                                        </ul>
+                                    </div>
+
+                                    <h1 class="text-3xl font-bold">Cap For Hockeys</h1>
+                                    <p class="py-6">We are really keen to attract parents whose kids are in the Juniors
+                                    </p>
+                                    <div class="flex space-x-10 ">
+                                        <h4 class="text-[#FF4240] text-2xl">Price - $22.00</h4>
+                                        <p><i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="card  p-8 border-2 border-slate-400 shadow-xl">
+                            <div class="hero-content flex-col lg:flex-row">
+                                <img src="Images/8.png" class="max-w-sm rounded-lg shadow-2xl" />
                                 <div>
                                     <div class="flex flex-row lg:flex-col space-x-4">
                                         <ul class="flex gap-10  ">
@@ -285,7 +332,7 @@
                         </div>
                         <div class="card  p-8 border-2 border-slate-400 shadow-xl">
                             <div class="hero-content flex-col lg:flex-row">
-                                <img src="Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
+                                <img src="Images/9.png" class="max-w-sm rounded-lg shadow-2xl" />
                                 <div>
                                     <div class="flex flex-row lg:flex-col space-x-4">
                                         <ul class="flex gap-10  ">
@@ -296,8 +343,8 @@
                                     </div>
 
                                     <h1 class="text-3xl font-bold">World Cup Flags Football</h1>
-                                    <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
-                                        excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.
+                                    <p class="py-6">We teach the rules as well as foundation skills - and above all how
+                                        to enjoy gentle game play on the astro.
                                     </p>
                                     <div class="flex space-x-10 ">
                                         <h4 class="text-[#FF4240] text-2xl">Price - $22.00</h4>
@@ -309,55 +356,7 @@
                         </div>
                         <div class="card  p-8 border-2 border-slate-400 shadow-xl">
                             <div class="hero-content flex-col lg:flex-row">
-                                <img src="Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
-                                <div>
-                                    <div class="flex flex-row lg:flex-col space-x-4">
-                                        <ul class="flex gap-10  ">
-                                            <li><i class="fa-solid fa-star text-[#F99808]"></i> 5.0</li>
-                                            <li><i class="fa-regular fa-eye"></i> 20</li>
-                                            <li><i class="fa-regular fa-heart"></i> 200</li>
-                                        </ul>
-                                    </div>
-
-                                    <h1 class="text-3xl font-bold">World Cup Flags Football</h1>
-                                    <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
-                                        excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.
-                                    </p>
-                                    <div class="flex space-x-10 ">
-                                        <h4 class="text-[#FF4240] text-2xl">Price - $22.00</h4>
-                                        <p><i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="card  p-8 border-2 border-slate-400 shadow-xl">
-                            <div class="hero-content flex-col lg:flex-row">
-                                <img src="Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
-                                <div>
-                                    <div class="flex flex-row lg:flex-col space-x-4">
-                                        <ul class="flex gap-10  ">
-                                            <li><i class="fa-solid fa-star text-[#F99808]"></i> 5.0</li>
-                                            <li><i class="fa-regular fa-eye"></i> 20</li>
-                                            <li><i class="fa-regular fa-heart"></i> 200</li>
-                                        </ul>
-                                    </div>
-
-                                    <h1 class="text-3xl font-bold">World Cup Flags Football</h1>
-                                    <p class="py-6">Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda
-                                        excepturi exercitationem quasi. In deleniti eaque aut repudiandae et a id nisi.
-                                    </p>
-                                    <div class="flex space-x-10 ">
-                                        <h4 class="text-[#FF4240] text-2xl">Price - $22.00</h4>
-                                        <p><i class="fa-solid fa-cart-shopping"></i> Delivery Fee : Free</p>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="card  p-8 border-2 border-slate-400 shadow-xl">
-                            <div class="hero-content flex-col lg:flex-row">
-                                <img src="Images/5.png" class="max-w-sm rounded-lg shadow-2xl" />
+                                <img src="Images/10.png" class="max-w-sm rounded-lg shadow-2xl" />
                                 <div>
                                     <div class="flex flex-row lg:flex-col space-x-4">
                                         <ul class="flex gap-10  ">
@@ -392,10 +391,10 @@
                 <div></div>
 
                 <div class="text-center p-10 space-y-3 ">
-                    <h3 class="text-5xl font-bold">Our New Products</h3>
-                    <p class="text-2xl">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat
-                        dolor. Purus urna
-                        in sit nullam proin. </p>
+                    <h3 class="text-5xl font-bold">Clients Question</h3>
+                    <p class="text-2xl">In the Clients Question section, individuals can seek clarification or address
+                        concerns related to the products or services offered. This interactive platform facilitates
+                        direct communication, ensuring clients receive prompt and personalized assistance. </p>
                 </div>
                 <div class="py-24 container ">
                     <div class="card  p-8 border-2 border-slate-400 shadow-xl">
@@ -409,8 +408,9 @@
                                         Our Equipment
                                     </div>
                                     <div class="collapse-content">
-                                        <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim
-                                            sagittis turpis in magna.</p>
+                                        <p>Our state-of-the-art equipment is designed to optimize efficiency and
+                                            performance, meeting the diverse needs of our clients across various
+                                            industries</p>
                                     </div>
                                 </div>
                                 <div class="collapse collapse-plus rounded-none">
@@ -473,10 +473,9 @@
                 <div></div>
 
                 <div class="text-center p-10 space-y-3 ">
-                    <h3 class="text-5xl font-bold">Our New Products</h3>
-                    <p class="text-2xl">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat
-                        dolor. Purus urna
-                        in sit nullam proin. </p>
+                    <h3 class="text-5xl font-bold">Get In Touch</h3>
+                    <p class="text-2xl">Feel free to get in touch with our customer support team for any inquiries or
+                        assistance; we're here to help. </p>
                 </div>
                 <div class="py-5 lg:py-24 container grid gap-16 grid-cols-1 md:grid-cols-2 flex-1">
                     <div class="border-2 border-slate-200 rounded-lg p-20">
@@ -586,9 +585,7 @@
             <aside>
                 <div class="text-center lg:text-left ">
                     <h4 class="text-2xl font-bold">Get In Touch</h4>
-                    <p>Dit amet consectetur. Condimentum <br> adipiscing aliquam turpis placerat dolor. Purus <br>
-                        urna in sit nullam
-                        proin. </p>
+                    <p>Contact our support team for <br> help with any inquiries; we're here for you. </p>
                     <p><i class="fa-regular fa-envelope text-[#FF4240]"></i><span> hockeys@support.com</span> <br /><i
                             class="fa-solid fa-phone text-[#FF4240]"></i><span> (+62) 123-321-543</span>
                     </p>
