font size chages

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </ul>
                     </div>
                     <img src="images/logo.png" alt="">
-                    <a class="text-3xl  font-extrabold">Hockey <span class="text-[#FF4240]">’</span>s</a>
+                    <a class="lg:text-3xl text-2xl  font-extrabold">Hockey <span class="text-[#FF4240]">’</span>s</a>
                 </div>
                 <div class="navbar-center hidden lg:flex ">
                     <ul class="menu menu-horizontal px-1 text-xl">
@@ -86,9 +86,12 @@
                         <a href="#slide1" class="btn btn-circle bg-black text-white">❮</a>
                         <a href="#slide2" class="btn btn-circle bg-black text-white">❯</a>
                     </div>
-                    <div class=" lg:absolute bottom-10 right-10 bg-black text-white rounded-lg max-w-md text-center">
-                        <h2 class="font-semibold text-2xl">Meet all the heroes from the field</h2>
-                        <p class="">Teddington Hockey Club is an inclusive, friendly, thriving and successful club, run
+                    <div
+                        class=" lg:absolute absolute lg:bottom-10 bottom-20  right-2 lg:right-10 bg-black text-white rounded-lg max-w-xs lg:max-w-md text-center">
+                        <h2 class="font-semibold text-xl lg:text-2xl">Meet all the heroes from the field</h2>
+                        <p class="text-[10px] lg:text-xl">Teddington Hockey Club is an inclusive, friendly, thriving and
+                            successful
+                            club, run
                             by
                             volunteers. We welcome all new joiners. Please refer to our Membership and Fees Terms and
                             Conditions PDF to the right for further information around installments and more.</p>
@@ -101,9 +104,11 @@
                         <a href="#slide2" class="btn btn-circle bg-black text-white ">❮</a>
                         <a href="#slide1" class="btn btn-circle bg-black text-white">❯</a>
                     </div>
-                    <div class=" lg:absolute bottom-10 right-10 bg-black text-white rounded-lg max-w-md text-center">
-                        <h2 class="font-semibold text-2xl">Meet all the heroes from the field</h2>
-                        <p class="">Teddington Hockey Club is an inclusive, friendly, thriving and successful club, run
+                    <div
+                        class=" lg:absolute absolute lg:bottom-10 bottom-20  right-2 lg:right-10 bg-black text-white rounded-lg max-w-xs lg:max-w-md text-center">
+                        <h2 class="font-semibold text-xl lg:text-2xl">Meet all the heroes from the field</h2>
+                        <p class="text-[10px] lg:text-xl">Teddington Hockey Club is an inclusive, friendly, thriving and
+                            successful club, run
                             by
                             volunteers. We welcome all new joiners. Please refer to our Membership and Fees Terms and
                             Conditions PDF to the right for further information around installments and more.</p>
